# reinforcement_learning

./: .gitignore  README.md  generalized_policy_iteration.py  k_armed_bandits.py
MCTS/fully_observable/: config.py  main.py  mcts.py  object_maintenance.py  util.py
bayesian_optimization/: bayesian_optimization.py  references.txt
robot_tasker/: CMakeLists.txt  README.md  ann_test_moon_data.csv  environment_util.h  global_config.yaml  global_params.yaml  global_typedef.h  robot_tasker.cpp  robot_tasker.md  util.h
robot_tasker/ANN/: ANN.h  ANN_activation.h  ANN_optimizers.h  ANN_type_traits.h  ANN_typedef.h  test_ANN.h
robot_tasker/cmake/: external_libs.cmake.template
robot_tasker/learning/: robot_dynamics.h  to_drive.h  to_drive_util.cpp  to_drive_util.h  to_drive_v2.h  training_visualizer.h
robot_tasker/scripts/analysis/: actor_bias_grad_hist.npy  actor_bias_hist.npy  actor_loss_hist.npy  actor_weight_grad_hist.npy  actor_weight_hist.npy  actor_wgrad_norm_hist.npy  ann_test_moon_data.csv  auto_optim_termination.py  critic_bias_grad_hist.npy  critic_bias_hist.npy  critic_loss_hist.npy  critic_weight_grad_hist.npy  critic_weight_hist.npy  critic_wgrad_norm_hist.npy  gradient_analysis.py  replay_buffer.npy  replay_buffer_analysis.py
robot_tasker/src/: global_typedef.h  robot_tasker.cpp
robot_tasker/src/ANN/: ANN.h  ANN_activation.h  ANN_type_traits.h  ANN_typedef.h  ANN_util.h
robot_tasker/src/ANN_v2/: ANN.h  ANN_activation.h  ANN_core.h  ANN_forward.h  ANN_gradient.h  ANN_initialization.h  ANN_optimizers.h  ANN_typedef.h  ANN_util.h  test_ANN.h
robot_tasker/src/gui/: gui.cpp  gui.h  gui_typedef.h  gui_util.cpp  gui_util.h  test.cpp
robot_tasker/src/learning/to_drive/: robot_dynamics.cpp  robot_dynamics.h  robot_typedef.h  to_drive.h  to_drive_typedef.h  to_drive_util.cpp  to_drive_util.h  to_drive_visualization.h
robot_tasker/src/tests/: ann_runtime.cpp
robot_tasker/src/util/: environment_util.h  util.cpp  util.h
